--- a/config/sync/core.entity_form_display.media.file.default.yml
+++ b/config/sync/core.entity_form_display.media.file.default.yml
@@ -6,7 +6,14 @@ dependencies:
     - field.field.media.file.field_media_file
     - media.type.file
   module:
+    - field_layout
     - file
+    - layout_discovery
+third_party_settings:
+  field_layout:
+    id: layout_onecol
+    settings:
+      label: ''
 _core:
   default_config_hash: aTmkyzM9KVynzcYSBOVL5rKVnMCgVnf4w6gX6Cn5hzU
 id: media.file.default
@@ -15,12 +22,12 @@ bundle: file
 mode: default
 content:
   field_media_file:
+    type: file_generic
     weight: 1
+    region: content
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
-    type: file_generic
-    region: content
   name:
     type: string_textfield
     weight: 0
