--- a/config/sync/core.entity_form_display.media.remote_video.media_library.yml
+++ b/config/sync/core.entity_form_display.media.remote_video.media_library.yml
@@ -6,6 +6,14 @@ dependencies:
     - core.entity_form_mode.media.media_library
     - field.field.media.remote_video.field_media_oembed_video
     - media.type.remote_video
+  module:
+    - field_layout
+    - layout_discovery
+third_party_settings:
+  field_layout:
+    id: layout_onecol
+    settings:
+      label: ''
 _core:
   default_config_hash: tg6QHJLUfZUtXHZIZhbm0TaWV3TX-8PEhLXh0gJgFm4
 id: media.remote_video.media_library
