--- a/config/sync/core.entity_view_display.media.image.default.yml
+++ b/config/sync/core.entity_view_display.media.image.default.yml
@@ -7,7 +7,14 @@ dependencies:
     - image.style.large
     - media.type.image
   module:
+    - field_layout
     - image
+    - layout_discovery
+third_party_settings:
+  field_layout:
+    id: layout_onecol
+    settings:
+      label: ''
 _core:
   default_config_hash: scY87o0wnYjHRwhnGl5UVzAxn_U682ySoisrNfvsUvo
 id: media.image.default
@@ -16,13 +23,13 @@ bundle: image
 mode: default
 content:
   field_media_image:
-    label: visually_hidden
-    weight: 0
-    settings:
-      image_style: large
-      image_link: ''
-    third_party_settings: {  }
     type: image
+    label: visually_hidden
+    settings:
+      image_link: ''
+      image_style: large
+    third_party_settings: {  }
+    weight: 0
     region: content
 hidden:
   created: true
