--- a/config/sync/core.entity_view_display.media.remote_video.media_library.yml
+++ b/config/sync/core.entity_view_display.media.remote_video.media_library.yml
@@ -8,7 +8,14 @@ dependencies:
     - image.style.medium
     - media.type.remote_video
   module:
+    - field_layout
     - image
+    - layout_discovery
+third_party_settings:
+  field_layout:
+    id: layout_onecol
+    settings:
+      label: ''
 _core:
   default_config_hash: v6vxXxNCXyN-5w-vM8JxedKjnD5Qd8NxsMmXha0lPnk
 id: media.remote_video.media_library
@@ -20,10 +27,10 @@ content:
     type: image
     label: hidden
     settings:
-      image_style: medium
       image_link: ''
-    weight: 0
+      image_style: medium
     third_party_settings: {  }
+    weight: 0
     region: content
 hidden:
   created: true
