--- a/config/sync/core.entity_view_display.node.landing_page.teaser.yml
+++ b/config/sync/core.entity_view_display.node.landing_page.teaser.yml
@@ -6,7 +6,14 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - node.type.landing_page
   module:
+    - field_layout
+    - layout_discovery
     - user
+third_party_settings:
+  field_layout:
+    id: layout_onecol
+    settings:
+      label: ''
 _core:
   default_config_hash: c2jlgK1x7HbTXdLOz3zQlCgWCKMeYrowzpnA-Dvw-mM
 id: node.landing_page.teaser
@@ -15,8 +22,8 @@ bundle: landing_page
 mode: teaser
 content:
   links:
-    weight: 100
     settings: {  }
     third_party_settings: {  }
+    weight: 100
     region: content
 hidden: {  }
