--- a/composer.json
+++ b/composer.json
@@ -31,46 +31,47 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-      "composer/installers": "^1.9",
-      "cweagans/composer-patches": "^1.6",
-      "drupal/admin_toolbar": "^2.3",
-      "drupal/better_exposed_filters": "^4.0",
-      "drupal/config_split": "^1.4",
-      "drupal/core-composer-scaffold": "^9",
-      "drupal/core-project-message": "^9",
-      "drupal/core-recommended": "^9",
-      "drupal/devel": "^4.0",
-      "drupal/environment_indicator": "^4.0",
-      "drupal/focal_point": "^1.5",
-      "drupal/google_analytics": "^3.1",
-      "drupal/honeypot": "^2.0",
-      "drupal/image_style_quality": "^1.4",
-      "drupal/layout_builder_browser": "^1.1",
-      "drupal/layout_builder_iframe_modal": "^1.0",
-      "drupal/media_entity_facebook": "^3.0@beta",
-      "drupal/media_entity_instagram": "^3.0",
-      "drupal/media_entity_twitter": "^2.4",
-      "drupal/metatag": "^1.14",
-      "drupal/paragraphs": "^1.12",
-      "drupal/pathauto": "^1.8",
-      "drupal/quicklink": "^1.3",
-      "drupal/rabbit_hole": "^1.0",
-      "drupal/recaptcha": "^3.0",
-      "drupal/redirect": "^1.6",
-      "drupal/redis": "^1.4",
-      "drupal/search_api_solr": "^4.1",
-      "drupal/seckit": "^2.0",
-      "drupal/shs": "^1.0",
-      "drupal/smtp": "^1.0",
-      "drupal/stage_file_proxy": "^1.0",
-      "drupal/svg_image": "^1.14",
-      "drupal/twig_tweak": "^2.6",
-      "drupal/xmlsitemap": "^1.0",
-      "drush/drush": "^10.3",
-      "kint-php/kint": "^3.3",
-      "kporras07/composer-symlinks": "dev-master",
-      "manaticr/bloom": "^1.0",
-      "pantheon-systems/drupal-integrations": "^9.0"
+    "composer/installers": "^1.9",
+    "cweagans/composer-patches": "^1.6",
+    "drupal/admin_toolbar": "^2.3",
+    "drupal/better_exposed_filters": "^4.0",
+    "drupal/config_split": "^1.4",
+    "drupal/core-composer-scaffold": "^9",
+    "drupal/core-project-message": "^9",
+    "drupal/core-recommended": "^9",
+    "drupal/devel": "^4.0",
+    "drupal/environment_indicator": "^4.0",
+    "drupal/focal_point": "^1.5",
+    "drupal/google_analytics": "^3.1",
+    "drupal/honeypot": "^2.0",
+    "drupal/image_style_quality": "^1.4",
+    "drupal/layout_builder_browser": "^1.1",
+    "drupal/layout_builder_iframe_modal": "^1.0",
+    "drupal/media_entity_facebook": "^3.0@beta",
+    "drupal/media_entity_instagram": "^3.0",
+    "drupal/media_entity_twitter": "^2.4",
+    "drupal/metatag": "^1.14",
+    "drupal/paragraphs": "^1.12",
+    "drupal/pathauto": "^1.8",
+    "drupal/quicklink": "^1.3",
+    "drupal/rabbit_hole": "^1.0",
+    "drupal/recaptcha": "^3.0",
+    "drupal/redirect": "^1.6",
+    "drupal/redis": "^1.4",
+    "drupal/search_api_solr": "^4.1",
+    "drupal/seckit": "^2.0",
+    "drupal/show_title": "^2.0",
+    "drupal/shs": "^1.0",
+    "drupal/smtp": "^1.0",
+    "drupal/stage_file_proxy": "^1.0",
+    "drupal/svg_image": "^1.14",
+    "drupal/twig_tweak": "^2.6",
+    "drupal/xmlsitemap": "^1.0",
+    "drush/drush": "^10.3",
+    "kint-php/kint": "^3.3",
+    "kporras07/composer-symlinks": "dev-master",
+    "manaticr/bloom": "^1.0",
+    "pantheon-systems/drupal-integrations": "^9.0"
   },
   "require-dev": {
       "chirripo/chirripo": "^1.0",
