--- a/config/sync/core.entity_view_display.node.author.full.yml
+++ b/config/sync/core.entity_view_display.node.author.full.yml
@@ -1,8 +1,9 @@
-uuid: 5b45bfea-74b7-46aa-9b53-fa2b6207b427
+uuid: 9e6eec69-2fd9-4d12-882f-f1be19e90d81
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.full
     - field.field.node.author.body
     - field.field.node.author.field_nationality
     - field.field.node.author.field_photo
@@ -17,10 +18,10 @@ third_party_settings:
     id: layout_onecol
     settings:
       label: ''
-id: node.author.default
+id: node.author.full
 targetEntityType: node
 bundle: author
-mode: default
+mode: full
 content:
   body:
     type: text_default
@@ -31,7 +32,7 @@ content:
     region: content
   field_photo:
     type: entity_reference_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: 200x200
       link: false
