--- a/config/sync/core.entity_view_display.node.news.teaser.yml
+++ b/config/sync/core.entity_view_display.node.news.teaser.yml
@@ -31,30 +31,34 @@ bundle: news
 mode: teaser
 content:
   body:
-    type: text_summary_or_trimmed
+    type: text_trimmed
     label: hidden
     settings:
-      trim_length: 600
+      trim_length: 100
     third_party_settings: {  }
-    weight: 101
+    weight: 2
     region: content
-  links:
-    settings: {  }
+  field_image:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: all
+      link: false
     third_party_settings: {  }
-    weight: 100
+    weight: 1
     region: content
   show_title:
     settings: {  }
     third_party_settings: {  }
-    weight: 100
+    weight: 0
     region: content
 hidden:
   field_author: true
   field_category: true
   field_comment: true
   field_date: true
-  field_image: true
   field_section: true
   field_source: true
   field_tags: true
   field_video: true
+  links: true
