NES-7: Create related news view.

--- a/config/sync/core.entity_view_display.node.news.teaser.yml
+++ b/config/sync/core.entity_view_display.node.news.teaser.yml
@@ -38,11 +38,11 @@ content:
     third_party_settings: {  }
     weight: 2
     region: content
-  field_image:
+  field_video:
     type: entity_reference_entity_view
-    label: hidden
+    label: above
     settings:
-      view_mode: all
+      view_mode: default
       link: false
     third_party_settings: {  }
     weight: 1
@@ -57,8 +57,8 @@ hidden:
   field_category: true
   field_comment: true
   field_date: true
+  field_image: true
   field_section: true
   field_source: true
   field_tags: true
-  field_video: true
   links: true
