NES-10: Create contact page for the site .

--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -3,7 +3,7 @@ _core:
 langcode: en
 uuid: e6191fd0-ba37-4233-a58f-6401649f27eb
 name: Drupal
-mail: admin@example.com
+mail: castilloyuvania15@gmail.com
 slogan: ''
 page:
   403: ''
